--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 
-               <div class="RED_CUBE">RED_CUBE(BETA)<br> Помоги маленькому кубику спасти свой мир от великого зла и помочь другим кубикам которые пострадали от него
+               <div class="RED_CUBE">RED_CUBE(BETA)<br> Проходи огромное колличество уровней! Сражайся с врагамии и могучими боссами
 
 
 
@@ -32,3 +32,4 @@
     </div>
   </body>
 </html>
+
