--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
 
 
 
-               <div class="RED_CUBE">RED_CUBE(BETA)<br> Проходи огромное колличество уровней! Сражайся с врагамии и могучими боссами
+               <div class="RED_CUBE">RED_CUBE(BETA)<br> Проходи огромное колличество уровней! Сражайся с врагамии и могучими боссами <br><br> Выберите устройство, с которого вы будете играть.
 
 
 
 
 
 
- <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">Играть в браузере</a></div>
+ <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">ПК/ноутбук</a></div>
+ <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm"Телефон</a></div>             
                
 
 
@@ -32,4 +33,5 @@
     </div>
   </body>
 </html>
+
 
