--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
  <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">ПК/ноутбук</a></div>
- <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm"Телефон</a></div>             
+ <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">Телефон</a></div>             
                
 
 
@@ -33,5 +33,6 @@
     </div>
   </body>
 </html>
+
 
 
