--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 
 
  <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">ПК/ноутбук</a></div>
- <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">Телефон</a></div>             
+              
+ <br><br> <a href="red cube(PHONE).html"target="_blank" class="<.test-0-abm">Телефон</a></div>             
                
 
 
@@ -33,6 +34,7 @@
     </div>
   </body>
 </html>
+
 
 
 
