--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
 
- <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">ПК/ноутбук</a></div>
+ <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">ПК/ноутбук</a>
               
  <br><br> <a href="red cube(PHONE).html"target="_blank" class="<.test-0-abm">Телефон</a></div>             
                
@@ -34,6 +34,7 @@
     </div>
   </body>
 </html>
+
 
 
 
