--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 
 
- <br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">ПК/ноутбук</a>
+ <div class="PC"><br><br> <a href="red cube.html"target="_blank" class="<.test-0-abm">ПК/ноутбук</a></div>
               
- <br><br> <a href="red cube(PHONE).html"target="_blank" class="<.test-0-abm">Телефон</a></div>             
+ <div class="PHONE"><br><br> <a href="red cube(PHONE).html"target="_blank" class="<.test-0-abm">Телефон</a></div>             
                
 
 
@@ -34,6 +34,7 @@
     </div>
   </body>
 </html>
+
 
 
 
